fix: sticky header spacing

--- a/src/components/header-center/header-center.scss
+++ b/src/components/header-center/header-center.scss
@@ -1,42 +1,60 @@
 @import "../../scss/bootstrap-breakpoints";
 
-.it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
-  max-width:72px;
-  max-height: 72px;
+header {
+  &.it-header-wrapper {
+    .it-header-center-wrapper {
+      .it-header-center-content-wrapper .it-brand-wrapper a .icon {
+        max-width: 72px;
+        max-height: 72px;
+      }
+    }
+  }
 }
 
 //mobile only ------------------------------------------------------------------------------------------
 @include media-breakpoint-down(sm) {
-  .it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
-    margin-right:12px;
-    margin-left:8px;
-  }
-  .it-header-center-wrapper .it-header-center-content-wrapper {
-    // justify-content:center;
+  header {
+    &.it-header-wrapper {
+      .it-header-center-wrapper {
+        .it-header-center-content-wrapper .it-brand-wrapper a .icon {
+          margin-right: 12px;
+          margin-left: 8px;
+        }
+      }
+    }
   }
 }
 
 //Small tablet ------------------------------------------------------------------------------------------
 @include media-breakpoint-up(sm) {
-  .it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
-    margin-left:8px;
-    margin-right:16px;
+  header {
+    &.it-header-wrapper {
+      .it-header-center-wrapper {
+        .it-header-center-content-wrapper .it-brand-wrapper a .icon {
+          margin-left: 8px;
+          margin-right: 16px;
+        }
+      }
+    }
   }
 }
 
 //Tablet portrait ---------------------------------------------------------------------------------------
 @include media-breakpoint-up(md) {
-
 }
 
 //Tablet landscape --------------------------------------------------------------------------------------
 @include media-breakpoint-up(lg) {
-  .it-header-center-wrapper {
-    height:104px
-  }
-  .it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
-    margin-right:24px;
-    margin-left:0;
+  header {
+    &.it-header-wrapper {
+      .it-header-center-wrapper {
+        height: 104px;
+        .it-header-center-content-wrapper .it-brand-wrapper a .icon {
+          margin-right: 24px;
+          margin-left: 0;
+        }
+      }
+    }
   }
 }
 
